Added stopretrysecs so that while we're waiting for SIGKILL, we signal stopsignal a few times

--- a/supervisor/skel/sample.conf
+++ b/supervisor/skel/sample.conf
@@ -97,6 +97,7 @@ serverurl=unix:///tmp/supervisor.sock ; use a unix:// URL  for a unix socket
 ;exitcodes=0                   ; 'expected' exit codes used with autorestart (default 0)
 ;stopsignal=QUIT               ; signal used to kill process (default TERM)
 ;stopwaitsecs=10               ; max num secs to wait b4 SIGKILL (default 10)
+;stopretrysecs=10              ; num of secs to wait before retrying stopsignal (default 10)
 ;stopasgroup=false             ; send stop signal to the UNIX process group (default false)
 ;killasgroup=false             ; SIGKILL the UNIX process group (def false)
 ;user=chrism                   ; setuid to this UNIX account to run the program
@@ -136,6 +137,7 @@ serverurl=unix:///tmp/supervisor.sock ; use a unix:// URL  for a unix socket
 ;exitcodes=0                   ; 'expected' exit codes used with autorestart (default 0)
 ;stopsignal=QUIT               ; signal used to kill process (default TERM)
 ;stopwaitsecs=10               ; max num secs to wait b4 SIGKILL (default 10)
+;stopretrysecs=10              ; num of secs to wait before retrying stopsignal (default 10)
 ;stopasgroup=false             ; send stop signal to the UNIX process group (default false)
 ;killasgroup=false             ; SIGKILL the UNIX process group (def false)
 ;user=chrism                   ; setuid to this UNIX account to run the program
